Bug 105127 - DOCX / VML import: vertical mirror of bezier shapes is ignored
Summary: DOCX / VML import: vertical mirror of bezier shapes is ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-05 17:47 UTC by Miklos Vajna
Modified: 2017-01-06 15:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Rerproducer document. (10.19 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-01-05 17:47 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-01-05 17:47:32 UTC
Created attachment 130183 [details]
Rerproducer document.

See the attached document, the only shape has this XML fragment:

<v:shape style="flip:..." path="...">

In case <v:shape> has a path attribute, it's imported as a BezierShape, and there the flip key in the style attribute is ignored.
Comment 1 Commit Notification 2017-01-06 09:57:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac03883cd66a2d58c17c8dac555a053586e46625

tdf#105127 VML import: handle <v:shape style="flip:..." path="...">

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2017-01-06 15:20:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86847b02c581e908b5aae1cb13be7dba0e40e180&h=libreoffice-5-3

tdf#105127 VML import: handle <v:shape style="flip:..." path="...">

It will be available in 5.3.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.