tdf#105127 VML import: handle <v:shape style="flip:..." path="...">

I don't see an easy way to implement this via UNO, so use the internal
API. As to the internal API usage,
SdrEditView::MirrorMarkedObjVertical() (for UI) and
SvxMSDffManager::ImportShape() (for WW8 import) are example client code.

Change-Id: I9bf27788db32fd35d6b56e0f1a240c4b7abc5604